# twist-academic

./: .pre-commit-config.yaml  CHANGELOG.md  makefile  pyproject.toml  release-please-config.json
.github/workflows/: release-please.yml
tests/: test_notification.py
twist_academic/: __init__.py  env.py  lark_notify.py  notify.py
