[project]
name = "twist-academic"
version = "0.2.0"
description = "A suite kit for personal academic life."
readme = "README.md"
requires-python = ">=3.9,<3.12"
authors = [
  { name = "SongshGeo", email = "songshgeo@gmail.com" },
]

dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=7.4.3",
  "allure-pytest>=2.13.2",
  "pytest-clarity>=1.0.1",
  "pytest-sugar>=0.9.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
